02-kubernetes-istio/service-type.yaml
kind: Service
apiVersion: v1
metadata:
  name: webserver-svc
  labels:
    run: webserver-svc
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
